--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
         </div>
       </nav>
 
-      <h1>Студия дизайна nёrd's</h1>
+      <h1 class="visually-hidden">Студия дизайна nёrd's</h1>
 
       <section class="photoslides">
-        <h2>Фотослайды</h2>
+        <h2 class="visually-hidden">Фотослайды</h2>
         <div class="photoslides-wrapper">
           <ul  class="photoslides-list">
             <li class="photoslides-item">
               <p class="photoslides-slogan">Долго, дорого,<br> скурпулезно.</p>
               <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="https://via.placeholder.com/760x431" alt="3 телефона">
+              <img src="img/nerds-index-slide-1.png" width="760" height="431" alt="3 телефона">
             </li>
             <li class="photoslides-item">
-              <p class="photoslides-slogan">Любим математику <br> как никто другой</p>
+              <p class="photoslides-slogan">Любим математику<br> как никто другой</p>
               <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
               <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="https://via.placeholder.com/760x431" alt="2 компьютера">
+              <img src="img/nerds-index-slide-2.png" width="760" height="431" alt="2 компьютера">
             </li>
             <li class="photoslides-item">
               <p class="photoslides-slogan">Только ночь,<br> только хардкор</p>
               <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
               <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="https://via.placeholder.com/760x431" alt="планшет и телефон">
+              <img src="img/nerds-index-slide-3.png" width="760" height="431" alt="планшет и телефон">
             </li>
           </ul>
           <button class="photoslides-button photoslides-round-button" type="button" disabled>кнопка1</button>
@@ -65,22 +65,22 @@
   <main class="page-main container">
 
     <section class="services">
-      <h2>Услуги</h2>
+      <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
-          <img src="https://via.placeholder.com/300x146" alt="веб-сайты на красном фоне">
+          <img src="img/illustration-1.png" width="300" height="146" alt="веб-сайты на красном фоне">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="button website-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
-          <img src="https://via.placeholder.com/300x146" alt="приложения на зеленом фоне">
+          <img src="img/illustration-2.png" width="300" height="146" alt="приложения на зеленом фоне">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
           <a class="button app-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
-          <img src="https://via.placeholder.com/300x146" alt="презентации на желтом фоне">
+          <img src="img/illustration-3.png" width="300" height="146" alt="презентации на желтом фоне">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
           <a class="button presentation-button" href="#">Заказать</a>
@@ -90,7 +90,7 @@
 
     <div class="features-and-statistics">
       <section class="features">
-        <h2>Преимущества</h2>
+        <h2 class="visually-hidden">Преимущества</h2>
         <p class="features-slogan">Мы - маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
         <p class="features-desc">Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем не покладая рук, как роботы.</p>
         <p class="features-text">Выполняем заказы на разработку:</p>
@@ -108,8 +108,8 @@
       </section>
 
       <section class="statistics">
-        <h2>Статистика</h2>
-        <img src="https://via.placeholder.com/360x208" alt="изображение nerds с разноцветной абстракцией">
+        <h2 class="visually-hidden">Статистика</h2>
+        <img class="nerds-illustration" src="https://via.placeholder.com/360x208" alt="изображение nerds с разноцветной абстракцией">
         <p class="statistics-caption">С 2004 года любим точность во всем:</p>
         <ul class="statistics-list">
           <li class="statistics-item">
@@ -134,7 +134,7 @@
     </div>
 
     <section class="partners">
-      <h2>Наши партнеры:</h2>
+      <h2 class="visually-hidden">Наши партнеры:</h2>
       <ul class="partners-list">
         <li class="partners-item">
           <a class="partner-link" href="https://htmlacademy.ru/intensive/htmlcss">
@@ -163,13 +163,13 @@
   <footer class="page-footer main-footer">
 
     <section class="modal modal-map container">
-      <h2>Карта</h2>
+      <h2 class="visually-hidden">Карта</h2>
       <!-- Здесь будет карта -->
       <img src="img/map.jpg" width="1440" height="416" alt="карта с адресом nёrds">
     </section>
 
     <section class="contacts">
-      <h2>Контактная информация</h2>
+      <h2 class="visually-hidden">Контактная информация</h2>
       <p class="contacts-title">Nёrds design studio</p>
       <p class="contacts-address">191186, Санкт-Петербург,<br>
         ул. Б. Конюшенная, д. 19/8
@@ -181,13 +181,13 @@
     </section>
 
     <section class="marker">
-      <h2>маркер nёrd's на карте</h2>
+      <h2 class="visually-hidden">маркер nёrd's на карте</h2>
       <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
     <div class="footer-wrapper container">
       <section class="social">
-        <h2>Мы в соцсетях</h2>
+        <h2 class="visually-hidden">Мы в соцсетях</h2>
         <ul class="social-list">
           <li class="social-item">
             <a class="button social-button" href="#">Вконтакте</a>
@@ -202,7 +202,7 @@
       </section>
 
       <section class="sale">
-        <h2>Скидка</h2>
+        <h2 class="visually-hidden">Скидка</h2>
         <p class="sale-tagline">Давайте дружить, это выгодно!</p>
         <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
       </section>
