--- a/catalog.html
+++ b/catalog.html
@@ -11,107 +11,179 @@
 <body  class="page-body">
 
   <header class="main-header">
-    <div class="main-header-wrapper container">
+    <div class="container">
       <nav class="main-navigation">
         <a class="inner-header-logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
         </a>
-        <!-- <div class="main-navigation-wrapper"> -->
         <ul class="site-navigation">
           <li class="site-link"><a href="#">Студия</a></li>
           <li class="site-link"><a href="#">Клиенты</a></li>
-          <li class="site-link"><a href="catalog.html">Магазин</a></li>
-          <li class="site-link"><a href="#">Контакты</a></li>
+          <li class="site-link navigation-current"><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <div class="user-navigation">
           <a class="cart" href="#">Корзина</a>
-          <!-- </div> -->
         </div>
       </nav>
-
       <h1 class="catalog-title">Магазин готовых шаблонов</h1>
     </div>
   </header>
 
   <main class="page-catalog container">
 
-    <section class="service-filter">
-      <h2 class="visually-hidden">Фильтр услуг</h2>
-      <span class="service-filter-desc">Стоимость:</span>
-      <!-- Здесь будет форма фильтра-->
-    </section>
+<section class="service-filter">
+  <h2 class="visually-hidden">Фильтр услуг</h2>
+    <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+      <fieldset class="filter-item">
+        <legend>Стоимость:</legend>
+        <div class="range-filter">
+          <div class="range-controls">
+            <div class="scale">
+              <div class="bar" style="
+              width: 70%;
+              margin-left: 0%">
+            </div>
+          </div>
+          <div class="toggle toggle-min" tabindex="0" style="
+          left: 5%">
+        </div>
+        <div class="toggle toggle-max" tabindex="0" style="
+        left: 60%">
+      </div>
+    </div>
 
-    <section class="sorting-filter">
-      <h2 class="visually-hidden">Фильтр сортировки</h2>
-      <span class="sorting-filter-desc">Сортировать:</span>
-      <ul class="sorting-filter-list">
+    <div class="price-controls">
+      <label class="min-price">
+        от <input type="number" name="min-price" value="0">
+      </label>
+      <label class="max-price">
+        до <input type="number" name="max-price" value="15000">
+      </label>
+    </div>
+  </div>
+</fieldset>
 
-        <li class="sorting-filter-item sorting-filter-item-current">
-          <a>По цене</a>
-        </li>
-        <li class="sorting-filter-item">
-          <a href="#">По типу</a>
-        </li>
-        <li class="sorting-filter-item">
-          <a href="#">По названию</a>
-        </li>
-      </ul>
 
-      <ul class="sorting-list">
-        <li class="sorting-item sorting-item-current">
-          <a>Вниз</a>
-        </li>
-        <li class="sorting-item">
-          <a href="#">Вверх</a>
-        </li>
-      </ul>
-    </section>
+<fieldset class="filter-layot">
+        <legend>Сетка:</legend>
+        <ul>
+          <li class="filter-option filter-radio">
+            <input class="visually-hidden filter-input-radio filter-input" type="radio" name="layout" value="adaptive" id="filter-adaptive" checked>
+            <label for="filter-adaptive">Адаптивная</label>
+          </li>
+          <li class="filter-option filter-radio">
+            <input class="visually-hidden filter-input-radio filter-input" type="radio" name="layout" value="fixed" id="filter-fixed">
+            <label for="filter-fixed">Фиксированная</label>
+          </li>
+          <li class="filter-option filter-radio">
+            <input class="visually-hidden filter-input-radio filter-input" type="radio" name="layout" value="rubber" id="filter-rubber">
+            <label for="filter-rubber">Резиновая</label>
+          </li>
+        </ul>
+      </fieldset>
 
-    <section class="templates">
-      <h2 class="visually-hidden">Шаблоны</h2>
-      <ul class="template-list">
-        <li class="template-item">
-          <h3 class="visually-hidden">SEDONA</h3>
-          <img src="https://via.placeholder.com/360x40" alt="">
-          <!--
-          <button class="templates-button" type="button">.</button>
-          <button class="templates-button" type="button">.</button>
-          <button class="templates-button" type="button">.</button>
-        -->
-        <img class="template-picture" src="img/img-sedona.jpg" width="358" height="578" alt="шаблон SEDONA">
-        <!--
-        <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
-        <a class="template-price-title" href="#">Sedona</a>
-        <p class="template-price-text">Информационный сайт  для туристов</p>
-        <a class="button template-price-button" href="#">9 900 ₽</a>
-      -->
+
+      <fieldset class="filter-specificity">
+        <legend>Особенности:</legend>
+        <ul>
+          <li class="filter-option filter-checkbox">
+            <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
+            <label for="filter-slider">Слайдер</label>
+          </li>
+          <li class="filter-option filter-checkbox">
+            <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="block" id="filter-block">
+            <label for="filter-block">Блок преимуществ</label>
+          </li>
+          <li class="filter-option filter-checkbox">
+            <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
+            <label for="filter-news">Новости</label>
+          </li>
+          <li class="filter-option filter-checkbox">
+            <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
+            <label for="filter-gallery">Галерея</label>
+          </li>
+          <li class="filter-option filter-checkbox">
+            <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="shopping-cart" id="filter-shopping-cart">
+            <label for="filter-shopping-cart">Корзина</label>
+          </li>
+        </ul>
+      </fieldset>
+
+
+   <button type="submit" class="filter-button button">Показать</button>
+</form>
+</section>
+
+
+<section class="sorting-filter">
+  <h2 class="visually-hidden">Фильтр сортировки</h2>
+  <span>Сортировать:</span>
+  <ul class="sorting-filter-list">
+
+    <li class="sorting-filter-item sorting-filter-item-current">
+      <a>По цене</a>
     </li>
+    <li class="sorting-filter-item">
+      <a href="#">По типу</a>
+    </li>
+    <li class="sorting-filter-item">
+      <a href="#">По названию</a>
+    </li>
+  </ul>
 
+  <ul class="triangle-list">
+    <li class="triangle-item triangle-item-current">
+      <a class="triangle-down" href="#" aria-label="Вниз"></a>
+    </li>
+    <li class="triangle-item">
+      <a class="triangle-up" href="#" aria-label="Вверх"></a>
+    </li>
+  </ul>
+</section>
+
+<section class="templates">
+  <h2 class="visually-hidden">Шаблоны</h2>
+  <ul class="template-list">
     <li class="template-item">
-      <h3 class="visually-hidden">PINK</h3>
-      <img src="https://via.placeholder.com/360x40" alt="">
+      <h3 class="visually-hidden">SEDONA</h3>
+      <div class="templates-button">
+        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка"></button>
+      </div>
+      <img class="template-picture" src="img/img-sedona.jpg" width="358" height="578" alt="шаблон SEDONA">
       <!--
-      <button class="templates-button" type="button">.</button>
-      <button class="templates-button" type="button">.</button>
-      <button class="templates-button" type="button">.</button>
+      <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
+      <a class="template-price-title" href="#">Sedona</a>
+      <p class="template-price-text">Информационный сайт  для туристов</p>
+      <a class="button template-price-button" href="#">9 900 ₽</a>
     -->
-    <img class="template-picture" src="img/img-pink.jpg" width="358" height="578" alt="шаблон PINK">
-    <!--
-    <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
-    <a class="template-price-title" href="#">Pink App</a>
-    <p class="template-price-text">Продуктовый лендинг  приложения для iOS и Android</p>
-    <a class="button template-price-button" href="#">9 900 ₽</a>
-  -->
+  </li>
+
+  <li class="template-item">
+    <h3 class="visually-hidden">PINK</h3>
+    <div class="templates-button">
+      <button type="button" aria-label="Декоративная кнопка"></button>
+      <button type="button" aria-label="Декоративная кнопка"></button>
+      <button type="button" aria-label="Декоративная кнопка"></button>
+    </div>
+  <img class="template-picture" src="img/img-pink.jpg" width="358" height="578" alt="шаблон PINK">
+  <!--
+  <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
+  <a class="template-price-title" href="#">Pink App</a>
+  <p class="template-price-text">Продуктовый лендинг  приложения для iOS и Android</p>
+  <a class="button template-price-button" href="#">9 900 ₽</a>
+-->
 </li>
 
 <li class="template-item">
   <h3 class="visually-hidden">Barbershop BORODINSKI</h3>
-  <img src="https://via.placeholder.com/360x40" alt="">
-  <!--
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
--->
+  <div class="templates-button">
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+  </div>
 <img class="template-picture" src="img/img-barbershop.jpg" width="358" height="578" alt="шаблон Barbershop BORODINSKI">
 <!--
 <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона Barbershop BORODINSKI">
@@ -123,12 +195,11 @@
 
 <li class="template-item">
   <h3 class="visually-hidden">MiSHKA</h3>
-  <img src="https://via.placeholder.com/360x40" alt="">
-  <!--
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
--->
+  <div class="templates-button">
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+  </div>
 <img class="template-picture" src="img/img-mishka.jpg" width="358" height="578" alt="шаблон MiSHKA">
 <!--
 <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона MiSHKA">
@@ -140,12 +211,11 @@
 
 <li class="template-item">
   <h3 class="visually-hidden">A Plus</h3>
-  <img src="https://via.placeholder.com/360x40" alt="">
-  <!--
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
--->
+  <div class="templates-button">
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+  </div>
 <img class="template-picture" src="img/img-aplus.jpg" width="358" height="578" alt="шаблон A Plus">
 <!--
 <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона A Plus">
@@ -157,12 +227,11 @@
 
 <li class="template-item">
   <h3 class="visually-hidden">КВАСТ</h3>
-  <img src="https://via.placeholder.com/360x40" alt="">
-  <!--
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
-  <button class="templates-button" type="button">.</button>
--->
+  <div class="templates-button">
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+    <button type="button" aria-label="Декоративная кнопка"></button>
+  </div>
 <img class="template-picture" src="img/img-kvast.jpg" width="358" height="578" alt="шаблон КВАСТ">
 <!--
 <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона КВАСТ">
@@ -186,7 +255,7 @@
     <li class="pagination-item">
       <a href="#">3</a>
     </li>
-    <li class="pagination-item">
+    <li class="pagination-item pagination-item-next">
       <a href="#">Следующая</a>
     </li>
   </ul>
@@ -195,51 +264,69 @@
 </main>
 
 <footer class="page-footer main-footer">
+
   <section class="modal modal-map container">
     <h2 class="visually-hidden">Карта</h2>
     <!-- Здесь будет карта -->
     <img src="img/map.jpg" width="1440" height="416" alt="карта с адресом nёrds">
   </section>
 
+  <!--
   <section class="contacts">
-    <h2 class="visually-hidden">Контактная информация</h2>
-    <p class="contacts-title">Nёrds design studio</p>
-    <p class="contacts-address">191186, Санкт-Петербург,<br>
-      ул. Б. Конюшенная, д. 19/8
-    </p>
-    <p>тел.
-      <a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a>
-    </p>
-    <a class="button contacts-button" href="#">НАПИШИТЕ НАМ</a>
-  </section>
+  <h2 class="visually-hidden">Контактная информация</h2>
+  <p class="contacts-title">Nёrds design studio</p>
+  <p class="contacts-address">191186, Санкт-Петербург,<br>
+  ул. Б. Конюшенная, д. 19/8
+</p>
+<p>тел.
+<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a>
+</p>
+<a class="button contacts-button" href="#">НАПИШИТЕ НАМ</a>
+</section>
 
-  <section class="marker">
-    <h2 class="visually-hidden">маркер nёrd's на карте</h2>
-    <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
-  </section>
+<section class="marker">
+<h2 class="visually-hidden">маркер nёrd's на карте</h2>
+<img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
+</section>
+-->
 
-  <div class="footer-wrapper container">
-    <section class="social">
-      <h2 class="visually-hidden">Мы в соцсетях</h2>
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="button social-button" href="#">Вконтакте</a>
-        </li>
-        <li class="social-item">
-          <a class="button social-button" href="#">Фейсбук</a>
-        </li>
-        <li class="social-item">
-          <a class="button social-button" href="#">Инстаграм</a>
-        </li>
-      </ul>
-    </section>
+<div class="footer-wrapper container">
+<section class="social">
+  <h2 class="visually-hidden">Мы в соцсетях</h2>
+  <ul class="social-list">
+    <li class="social-item">
+      <a class="social-button" href="#">
+        <span class="visually-hidden">Вконтакте</span>
+        <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z" fill="white"/>
+        </svg>
+      </a>
+    </li>
+    <li class="social-item">
+      <a class="social-button" href="#">
+        <span class="visually-hidden">Фейсбук</span>
+        <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+        </svg>
+      </a>
+    </li>
+    <li class="social-item">
+      <a class="social-button" href="#">
+        <span class="visually-hidden">Инстаграм</span>
+        <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</section>
 
-    <section class="sale">
-      <h2 class="visually-hidden">Скидка</h2>
-      <p class="sale-tagline">Давайте дружить, это выгодно!</p>
-      <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
-    </section>
-  </div>
+<section class="sale">
+  <h2 class="visually-hidden">Скидка</h2>
+  <p class="sale-tagline">Давайте дружить, это выгодно!</p>
+  <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
+</section>
+</div>
 </footer>
 </body>
 </html>
